# racerbot_a

./: .gitignore  LICENSE  README.md  ROLES.md
Research/: RESEARCH.md
docs/: RESEARCH.md  ROLES.md
docs/meetings/: MEETING-1.md  MEETING-2.md  MEETING-3.md  MEETING-4.md  MEETING-5.md  MEETING-6.md  MEETING-7.md  MEETING-8.md  MEETING-9.md
meetings/: MEETING-1.md
src/: instructions.txt
src/disparity_extender/: CMakeLists.txt  package.xml
src/ftg/: CMakeLists.txt  package.xml
src/ftg_node/: CMakeLists.txt  package.xml
src/ftg_node/include/: ftg_node.hpp
src/ftg_node/launch/: start_follow_the_gap.py
src/ftg_node/src/: ftg_node.cpp
src/reactive/: CMakeLists.txt  package.xml
src/reactive/include/: gap_finder_node.hpp  gap_follow_node.hpp  internode_communication.hpp  safety_node.hpp
src/reactive/launch/: reactive_launch.py
src/reactive/msg/: Gap.msg
src/reactive/src/: gap_finder_node.cpp  gap_follow_node.cpp  reactive_node.cpp  safety_node.cpp
src/reactive_node/: CMakeLists.txt  package.xml
