<?xml version="1.0"?>
<package format="3">
  <name>disparity_extender</name>
  <version>0.0.0</version>
  <description>Disparity extender package skeleton.</description>
  <maintainer email="rosdev@todo.todo">rosdev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
